      \code{do_missing()}, used to fix \PR{18579}.

      \item \code{SEXP} type \code{S4SXP} has been renamed \code{OBJSXP}
      to support experimenting with alternative object systems.  The
      \code{S4SXP} value can still be used in \code{C} code but is now
      deprecated. Based on contributions from the R Consortium
      Object-Oriented Programming Working Group.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{data()} no longer handles zipped data from
      long-defunct (since \R\sspace{}2.13.0) \option{--use-zip-data}
      installations.

      \item The legacy graphics devices \code{pictex()} and
      \code{xfig()} are now deprecated.  They do not support recent
      graphics enhancements and their font-handling is rudimentary. The
      intention is to retain them for historical interest as long as
      they remain somewhat functional.

      \item Support for \code{encoding = "MacRoman"} has been removed
      from the \code{pdf()} and \code{postscript()} devices -- this was
      a legacy encoding supporting classic macOS up to 2001 (with
      various revisions), and no longer has universal \code{libiconv}
      support.%% e.g. not in musl
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The methods package is more robust to not being attached to
      the search path. More work needs to be done.

      \item \code{pairwise.t.test()} misbehaved when subgroups had 0 DF
      for variance, even with \code{pool.sd = TRUE}.  (\PR{18594} by
      Jack Berry).

      \item Probability distribution functions \code{[dpq]<distrib>(x, *)},
      but also \code{bessel[IKJY](x, .)} are now consistently preserving
      \code{attributes(x)} when \code{length(x) == 0}, e.g., for a
      \eqn{2 \times 0}{2 x 0} matrix, thanks to Karolis Koncevičius'
      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error